doc/k8s_tasks/003_setup_dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: new-deployment
  template:
    metadata:
      labels:
        app: new-deployment
    spec:
      containers:
        - image: busybox888
          name: busyboxcontainer
          command: ["sh", "-c", "sleep 3600"]
