doc/k8s_tasks/003_setup_ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: research

---
apiVersion: v1
kind: Namespace
metadata:
  name: finance

---
apiVersion: v1
kind: Namespace
metadata:
  name: humanresources

---
apiVersion: v1
kind: Namespace
metadata:
  name: management

---
apiVersion: v1
kind: Pod
metadata:
  name: financepod1
  namespace: finance
spec:
  containers:
    - image: nginx
      name: nginxcontainer
---
apiVersion: v1
kind: Pod
metadata:
  name: financepod2
  namespace: finance
spec:
  containers:
    - image: nginx
      name: nginxcontainer
---
apiVersion: v1
kind: Pod
metadata:
  name: researchpod1
  namespace: research
spec:
  containers:
    - image: nginx
      name: nginxcontainer
---
apiVersion: v1
kind: Pod
metadata:
  name: blue
  namespace: management
spec:
  containers:
    - image: nginx
      name: nginxcontainer
