doc/k8s_tasks/005_setup_logs.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-logs-1
spec:
  containers:
    - image: kodekloud/event-simulator
      name: test-logs-1

---
apiVersion: v1
kind: Pod
metadata:
  name: test-logs-2
spec:
  containers:
    - image: kodekloud/event-simulator
      name: test-logs-2
