doc/k8s_tasks/006_setup_cm.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: cm-task
spec:
  containers:
    - image: kindjozsef/color
      name: cm-task
---
apiVersion: v1
kind: Pod
metadata:
  name: secret-task
spec:
  containers:
    - image: kindjozsef/secretdemo
      name: secret-task
