doc/k8s_tasks/007_setup_rl.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: rabbit
spec:
  containers:
    - image: ubuntu
      name: rabbit
      command: ["sh", "-c", "sleep 3600"]
      resources:
        requests:
          cpu: 100m
---
apiVersion: v1
kind: Pod
metadata:
  name: elephant
spec:
  containers:
    - image: polinux/stress
      name: mem-stress
      args: ["--vm", "1", "--vm-bytes", "15M", "--vm-hang", "1"]
      command: ["stress"]
      resources:
        limits:
          memory: 10Mi
