doc/k8s_tasks/007_setup_sc.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-sleeper
spec:
  containers:
    - image: ubuntu
      name: ubuntu-sleeper
      command: ["sh", "-c", "sleep 3600"]
