doc/k8s_tasks/008_setup.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: red
spec:
  containers:
    - name: container1
      image: nginx
    - name: container2
      image: redis
---
apiVersion: v1
kind: Pod
metadata:
  name: blue
spec:
  containers:
    - name: whatismyname
      image: nginx
    - name: areyousure
      image: redis
---
apiVersion: v1
kind: Pod
metadata:
  name: purple
spec:
  containers:
    - name: whatismyname
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: black
spec:
  containers:
    - name: whatismyname
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: orange
spec:
  containers:
    - name: whatismyname
      image: nginx
