doc/k8s_tasks/009_setup_labels.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: labels-test
---
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  namespace: labels-test
  labels:
    tier: frontend
    env: dev
    bu: finance
spec:
  containers:
    - image: nginx
      name: containername
---
apiVersion: v1
kind: Pod
metadata:
  name: pod2
  namespace: labels-test
  labels:
    tier: frontend
    env: prd
    bu: finance
spec:
  containers:
    - image: nginx
      name: containername
---
apiVersion: v1
kind: Pod
metadata:
  name: pod3
  namespace: labels-test
  labels:
    tier: backend
    env: dev
    bu: finance
spec:
  containers:
    - image: nginx
      name: containername
---
apiVersion: v1
kind: Pod
metadata:
  name: pod4
  namespace: labels-test
  labels:
    tier: backend
    env: prd
    bu: finance
spec:
  containers:
    - image: nginx
      name: containername
---
apiVersion: v1
kind: Pod
metadata:
  name: pod5
  namespace: labels-test
  labels:
    tier: frontend
    env: dev
    bu: insurance
spec:
  containers:
    - image: nginx
      name: containername
---
apiVersion: v1
kind: Pod
metadata:
  name: pod6
  namespace: labels-test
  labels:
    tier: frontend
    env: prd
    bu: insurance
spec:
  containers:
    - image: nginx
      name: containername
---
apiVersion: v1
kind: Pod
metadata:
  name: pod7
  namespace: labels-test
  labels:
    tier: backend
    env: dev
    bu: insurance
spec:
  containers:
    - image: nginx
      name: containername
---
apiVersion: v1
kind: Pod
metadata:
  name: pod8
  namespace: labels-test
  labels:
    tier: backend
    env: prd
    bu: insurance
spec:
  containers:
    - image: nginx
      name: containername
