doc/k8s_tasks/010_setup_persistence.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: webapp
spec:
  containers:
    - env:
        - name: LOG_HANDLERS
          value: file
      image: kodekloud/event-simulator
      name: event-simulator
