doc/k8s_tasks/007_setup_sa.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - image: gcr.io/kodekloud/customimage/my-kubernetes-dashboard
          name: dashboard
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
spec:
  type: NodePort
  ports:
    - targetPort: 8080
      port: 8080
  selector:
    app: dashboard
