doc/k8s_tasks/010_setup_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: old-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: frontend
      version: v1
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      containers:
        - image: kodekloud/webapp-color:v1
          name: webapp-color
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      version: v2
  template:
    metadata:
      labels:
        app: frontend
        version: v2
    spec:
      containers:
        - image: kodekloud/webapp-color:v2
          name: webapp-color
---
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  containers:
    - image: nginx
      name: test
      command:
        - sh
        - -c
        - |
          echo "for i in {1..100}; do output=\$(curl -s -f frontend-service:8080/info) && echo "\$output" || echo \"error\";sleep 0.5; done" >> /tmp/script.sh
          chmod +x /tmp/script.sh
          sleep 3600
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: frontend
  type: NodePort
